# Genoa

./: .profile  README.md  pkglist.txt  tlp.conf
.config/niri/: config.kdl
.config/nvim/: lazy-lock.json  lazyvim.json
.config/rust-dotfiles/: config.toml.template
.config/sway/: config
.config/waybar/: ModulesCustom
.github/: dependabot.yml
docs/: CONFIG_CHANGES.md  MANUAL_INSTALL.md
scripts/: session-launch.sh  sync-manual-pkglist.sh
sysScripts/battery-daemon/: Cargo.toml  battery-daemon.service
sysScripts/battery-daemon/src/: main.rs
sysScripts/cal-tui/: Cargo.toml  calender_data.json
sysScripts/cal-tui/src/: app.rs  engine.rs  main.rs  model.rs  ui.rs
sysScripts/clip-manager/src/: main.rs
sysScripts/cloudflare-toggle/: Cargo.toml
sysScripts/emoji-picker/src/: main.rs
sysScripts/install-wizard/: Cargo.toml
sysScripts/install-wizard/src/: graphics.rs  live_env.rs  main.rs  mock_env.rs  session.rs  traits.rs
sysScripts/kb-launcher/: Cargo.toml
sysScripts/kb-launcher/src/: main.rs
sysScripts/radio-menu/: Cargo.toml
sysScripts/radio-menu/src/: main.rs
sysScripts/rfkill-manager/: Cargo.toml
sysScripts/rfkill-manager/src/: main.rs
sysScripts/sidebar/: Cargo.toml
sysScripts/sidebar/src/: helpers.rs  main.rs  media.rs  style.rs  sysinfo.rs  ui.rs
sysScripts/sway-workspace/src/: main.rs
sysScripts/update-check/src/: main.rs
sysScripts/updater/: Cargo.toml
sysScripts/updater/src/: main.rs
sysScripts/waybar-finance/: Cargo.toml
sysScripts/waybar-finance/src/: app.rs  config.rs  (+3 more)
sysScripts/waybar-weather/: Cargo.toml
(+3 files in other folders)
