[package]
name = "sidebar"
version = "0.2.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
glib = "0.22.3"
gtk4 = { version = "0.11.3", features = ["v4_10"] }
gtk4-layer-shell = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wait-timeout = "0.2.1"
